<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/aiplant_icon"
                    android:layout_width="120dp"
                    android:layout_height="80dp"
                    android:background="@drawable/eye_plant_log_with_name" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:gravity="center">

            <EditText
                android:id="@+id/email_id_logIn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:minWidth="300dp"
                android:shadowColor="@android:color/holo_red_dark"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textColorHighlight="@android:color/darker_gray"
                android:textColorHint="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/password_id_logIn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/email_id_logIn"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:minWidth="300dp"
                android:shadowColor="@android:color/holo_red_dark"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textColorHighlight="@android:color/darker_gray"
                android:textColorHint="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/upperView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_id_log_in"
                style="@style/AppTheme.RoundedCornerMaterialButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:animateLayoutChanges="true"
                android:background="@drawable/input_fields_with_shadow"
                android:elevation="5dp"
                android:padding="10dp"
                android:shadowColor="@color/black"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/forgotPass_logIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/button_id_log_in"
                android:layout_alignParentEnd="true"
                android:clickable="true"
                android:elevation="4dp"
                android:focusable="true"
                android:gravity="center"
                android:onClick="onClick"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/hint_forgot_password"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold|italic" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/click_here_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/button_white_sharp_edge"
                android:onClick="onClick"
                android:drawableEnd="@drawable/email"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/click_here_sign_up"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal"
                app:autoSizeMaxTextSize="0dp" />

        </RelativeLayout>

    </LinearLayout>

</merge>