<resources>
    <string name="app_name">AIPlant</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_log_in">Login</string>
    <string name="hint_forgot_password">Forgot \n Password?</string>
    <string name="or">Or</string>
    <string name="hint_click_here">Click here for </string>
    <string name="hint_sign_up"> Sign Up</string>

    <string name="flower_name">Plant Name____</string>
...
    <string name="error_age">Please set your plant\'s birthday!</string>
    <string name="error_pic">Please upload a picture of your plant!</string>
    <string name="error_humidity">Add a value here</string>
    <string name="add_photo">Add photo</string>
    <!--    database-->
    <!-- strings for welcome slides -->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>


    <string name="slide_1_title">Welcome to eyePlant!</string>
    <string name="slide_1_desc">Our product is meant to help you take better care of your indoor plants by measuring the humidity in the soil, the temperature in the room and the amount of sunlight reaching the plant. Remember, good living conditions make the plant happy.</string>

    <string name="slide_2_title">Create a profile for your plant</string>
...
